[tool.poetry]
name = "repl_python3_beta_The-Good-Samaritan-API"
version = "0.1.0"
description = ""
authors = ["neeltron <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
replit = "^3.2.4"
python-dotenv = "^0.19.0"
python-jose = "^3.3.0"
Flask-Cors = "^3.0.10"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
